find_package(CUDAToolkit)
# find_package(BLAS REQUIRED)
add_executable(__reduce_v0 __reduce_v0.cu)
# target_link_libraries(__reduce_v0 PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY} ${BLAS_LIBRARIES})
target_link_libraries(__reduce_v0 PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(__reduce_v0 PRIVATE $<$<COMPILE_LANGUAGE:CUDA>: -G>)
endif()

add_executable(__reduce_v1_warp_divergence __reduce_v1_warp_divergence.cu)
target_link_libraries(__reduce_v1_warp_divergence PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(__reduce_v1_warp_divergence PRIVATE $<$<COMPILE_LANGUAGE:CUDA>: -G>)
endif()

add_executable(__reduce_v2_bank_conflict __reduce_v2_bank_conflict.cu)
target_link_libraries(__reduce_v2_bank_conflict CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(__reduce_v2_bank_conflict PRIVATE $<$<COMPILE_LANGUAGE:CUDA>: -G>)
endif()

add_executable(__reduce_v3_idle_a __reduce_v3_idle_a.cu)
target_link_libraries(__reduce_v3_idle_a CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(__reduce_v3_idle_a PRIVATE $<$<COMPILE_LANGUAGE:CUDA>: -G>)
endif()

add_executable(__reduce_v3_idle_b __reduce_v3_idle_b.cu)
target_link_libraries(__reduce_v3_idle_b CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(__reduce_v3_idle_b PRIVATE $<$<COMPILE_LANGUAGE:CUDA>: -G>)
endif()

add_executable(__reduce_v4_unroll_last_warp __reduce_v4_unroll_last_warp.cu)
target_link_libraries(__reduce_v4_unroll_last_warp CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(__reduce_v4_unroll_last_warp PRIVATE $<$<COMPILE_LANGUAGE:CUDA>: -G>)
endif()

add_executable(__reduce_v5_block_num __reduce_v5_block_num.cu)
target_link_libraries(__reduce_v5_block_num CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(__reduce_v5_block_num PRIVATE $<$<COMPILE_LANGUAGE:CUDA>: -G>)
endif()

add_executable(__reduce_v6_shuffle __reduce_v6_shuffle.cu)
target_link_libraries(__reduce_v6_shuffle CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(__reduce_v6_shuffle PRIVATE $<$<COMPILE_LANGUAGE:CUDA>: -G>)
endif()